{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 193,
  "lineage": "e2a4b62a-d587-75d7-09af-5b921d348059",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0940c00c6e8aa6832",
            "vpc_id": "vpc-04e9a9bbd0a032cf5"
          }
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-04bbabd6a5fd63f6c",
            "owner_id": "218619999254",
            "tags": {
              "Name": "ram-igw"
            },
            "vpc_id": "vpc-04e9a9bbd0a032cf5"
          }
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04bbabd6a5fd63f6c",
            "id": "r-rtb-0699c4da3d7d4b05d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0699c4da3d7d4b05d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0699c4da3d7d4b05d",
            "owner_id": "218619999254",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ram-public-rt"
            },
            "vpc_id": "vpc-04e9a9bbd0a032cf5"
          }
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018dbae8fdb818d4f",
            "route_table_id": "rtb-0699c4da3d7d4b05d",
            "subnet_id": "subnet-0758ad7945b13fc10"
          },
          "depends_on": [
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fd6662fcb6baea8",
            "route_table_id": "rtb-0699c4da3d7d4b05d",
            "subnet_id": "subnet-0e75c1038cfb71ca1"
          },
          "depends_on": [
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ram_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218619999254:security-group/sg-0954a8a8160add5fe",
            "description": "security group for restrict the access for different protocols",
            "egress": [],
            "id": "sg-0954a8a8160add5fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ram_sg",
            "name_prefix": null,
            "owner_id": "218619999254",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-04e9a9bbd0a032cf5"
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218619999254:subnet/subnet-031539bbf4940f5b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "25.10.2.0/24",
            "id": "subnet-031539bbf4940f5b5",
            "map_public_ip_on_launch": false,
            "owner_id": "218619999254",
            "tags": {
              "Name": "ram-private-subnet1"
            },
            "vpc_id": "vpc-04e9a9bbd0a032cf5"
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218619999254:subnet/subnet-0e564c7e1fb0eb323",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "25.10.3.0/24",
            "id": "subnet-0e564c7e1fb0eb323",
            "map_public_ip_on_launch": false,
            "owner_id": "218619999254",
            "tags": {
              "Name": "ram-private-subnet2"
            },
            "vpc_id": "vpc-04e9a9bbd0a032cf5"
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218619999254:subnet/subnet-0758ad7945b13fc10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "25.10.0.0/24",
            "id": "subnet-0758ad7945b13fc10",
            "map_public_ip_on_launch": false,
            "owner_id": "218619999254",
            "tags": {
              "Name": "ram-public-subnet1"
            },
            "vpc_id": "vpc-04e9a9bbd0a032cf5"
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218619999254:subnet/subnet-0e75c1038cfb71ca1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "25.10.1.0/24",
            "id": "subnet-0e75c1038cfb71ca1",
            "map_public_ip_on_launch": false,
            "owner_id": "218619999254",
            "tags": {
              "Name": "ram-public-subnet2"
            },
            "vpc_id": "vpc-04e9a9bbd0a032cf5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ram",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218619999254:vpc/vpc-04e9a9bbd0a032cf5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "25.10.0.0/16",
            "default_network_acl_id": "acl-04bc5b3567ef9f3bd",
            "default_route_table_id": "rtb-01049f8abe159af3c",
            "default_security_group_id": "sg-01d7bc7f60b4bb7ca",
            "dhcp_options_id": "dopt-fe15049c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04e9a9bbd0a032cf5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01049f8abe159af3c",
            "owner_id": "218619999254",
            "tags": {
              "Name": "ram-vpc"
            }
          }
        }
      ]
    }
  ]
}